# ioc-collector-tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
ioc_collector/: __init__.py  cli.py
ioc_collector/extractors/: __init__.py  base.py  cve.py  domain.py  email.py  hash.py  ip.py  regex_extractor.py  url.py
ioc_collector/formatters/: __init__.py  csv_formatter.py  json_formatter.py  md_report.py  stix_formatter.py  text_formatter.py
ioc_collector/parsers/: __init__.py  file_parser.py
ioc_collector/sources/: __init__.py  abuse_ch_feeds.py  cert_feeds.py  feed_manager.py  github_feed.py  ip_blocklist_feeds.py  phishing_feeds.py  remote_fetcher.py
ioc_collector/utils/: __init__.py  defanger.py  enrichment.py  validator.py
tests/: __init__.py  test_abuse_ch_feeds.py  test_advanced_features.py  test_cert_feeds.py  test_cli.py  test_csv_formatter.py  test_defanger.py  test_enrichment_apis.py  test_github_presets.py  test_ip_blocklist_feeds.py  test_md_report.py  test_otx_enrichment.py  test_parsers.py  test_phishing_feeds.py  test_regex_extractor.py
tests/sample_data/: test_iocs.txt
